File apps/ledger-live-desktop/static/i18n/en/app.json was translated to es-ES locale

--- a/apps/ledger-live-desktop/static/i18n/es/app.json
+++ b/apps/ledger-live-desktop/static/i18n/es/app.json
@@ -824,7 +824,20 @@
       "delegation" : {
         "title" : "Por si no lo sabías,",
         "description" : "El validador de Ledger pone en participación tus {{asset}} con una comisión del {{commission}}%.",
-        "cta" : "Participar con Ledger"
+        "cta" : "Participar con Ledger",
+        "linkText" : "Más información",
+        "ethereum" : {
+          "lido" : {
+            "title" : "Por si no lo sabías,",
+            "description" : "Pon tus Ethereum en participación con Lido y gana recompensas diarias. Sin periodo de inmovilización. Sin depósito mínimo.",
+            "cta" : "Participar con Lido"
+          },
+          "kiln" : {
+            "title" : "No hagas solo HODL. Haz crecer tus ETH",
+            "description" : "¿Tienes más de 32 ETH? Consigue recompensas pasivas poniendo tu ETH de forma segura en participación con Kiln.",
+            "cta" : "Participar con Kiln"
+          }
+        }
       }
     }
   },
@@ -1399,7 +1412,7 @@
         "label" : "Popular"
       },
       "earn" : {
-        "title" : "Gana",
+        "title" : "Poner en participación",
         "description" : "Haz crecer tus cripto con Ledger"
       }
     }
@@ -3776,7 +3789,9 @@
       "runLocalAppDeleteButton" : "Borrar",
       "runLocalAppOpenButton" : "Abrir",
       "enableLearnStagingUrl" : "URL de ensayo de la página Learn",
-      "enableLearnStagingUrlDesc" : "Activar el URL de ensayo de la página Learn."
+      "enableLearnStagingUrlDesc" : "Activar el URL de ensayo de la página Learn.",
+      "openOnboardingAppInstallDebug" : "Abre la pantalla de depuración de la instalación de aplicaciones iniciales",
+      "openOnboardingAppInstallDebugDesc" : "Abre una pantalla con los componentes del paso de sincronización de la instalación de aplicaciones iniciales"
     },
     "currencies" : {
       "selectPlaceholder" : "Seleccionar activo cripto",
@@ -3942,6 +3957,10 @@
       "fullNode" : {
         "title" : "Conectar nodo completo de Bitcoin",
         "desc" : "Configura tu nodo completo de Bitcoin para sincronizar y enviar transacciones sin usar el Explorer de Ledger."
+      },
+      "showZeroValueOperation" : {
+        "title" : "Transacciones con importe cero",
+        "desc" : "Mostrar las transacciones con importe cero en el historial de transacciones."
       }
     }
   },
@@ -5521,6 +5540,10 @@
       "title" : "Error al cargar la imagen desde el archivo.",
       "description" : "Vuelve a intentarlo con otra imagen"
     },
+    "ImageLoadFromNftError" : {
+      "title" : "Error al cargar la imagen del NFT",
+      "description" : "Vuelve a intentarlo con otro NFT"
+    },
     "ImageDownloadError" : {
       "title" : "Error al descargar la imagen",
       "description" : "Vuelve a intentarlo con otra imagen"
@@ -5593,6 +5616,13 @@
       "descriptionWithProductName" : "Primero debes configurar tu {{ productName }}.\nTe guiaremos a lo largo del proceso de configuración.",
       "goToOnboardingButton" : "Configurar mi dispositivo",
       "goToOnboardingButtonWithProductName" : "Configurar mi {{ productName }}"
+    },
+    "EtherscanAPIError" : {
+      "title" : "Se produjo un fallo al recuperar las transacciones",
+      "description" : "Se produjo un error inesperado con los exploradores. Inténtalo de nuevo más tarde"
+    },
+    "GasEstimationError" : {
+      "title" : "Se produjo un fallo en la estimación del gas"
     }
   },
   "cryptoOrg" : {
@@ -5631,7 +5661,13 @@
         "stepLabel" : "Elige una imagen",
         "description" : "Elige una imagen para establecerla como (...)",
         "pickFromNftGallery" : "Seleccionar de mi galería de NFT",
-        "upload" : "Cargar desde mi PC"
+        "myNfts" : "Mis NFTs",
+        "upload" : "Cargar desde mi PC",
+        "chooseNft" : "Elige un NFT",
+        "selectNft" : "Elegir NFT",
+        "previousSelectNft" : "Atrás",
+        "nftEmptyStateTitle" : "Todavía no hay NFTs para mostrar",
+        "nftEmptyStateDescription" : "Empieza agregando NFTs a tu billetera."
       },
       "adjust" : {
         "stepLabel" : "Ajustar imagen",
@@ -5657,5 +5693,37 @@
     },
     "customImageSet" : "Pantalla de bloqueo establecida",
     "finishCTA" : "Finalizar"
+  },
+  "onboardingAppInstall" : {
+    "restore" : {
+      "title" : "¿Quieres instalar las mismas aplicaciones que tenías en el {{deviceName}}?",
+      "titleNoDeviceName" : "¿Quieres instalar las mismas aplicaciones que tenías en tu dispositivo Ledger anterior?",
+      "subtitle" : "Puedes instalar o eliminar aplicaciones en cualquier momento.",
+      "installCTA" : "Restaurar aplicaciones",
+      "skipCTA" : "Lo haré más tarde"
+    },
+    "default" : {
+      "title" : "El {{ productName }} usa aplicaciones para posibilitar transacciones seguras en la cadena de bloques",
+      "subtitle" : "Te recomendamos descargar un conjunto de aplicaciones por defecto. Puedes descargar otras más adelante.",
+      "installCTA" : "Instalar aplicaciones",
+      "skipCTA" : "Lo haré más tarde"
+    },
+    "progress" : {
+      "loading" : "Cargando...",
+      "resolving" : "Resolviendo dependencias",
+      "progress" : "Instalando aplicaciones: {{progress}}%",
+      "disclaimer" : "Agrega o elimina aplicaciones en cualquier momento desde Ledger Live."
+    },
+    "cancelled" : {
+      "title" : "Se ha cancelado la instalación de aplicaciones en {{productName}}",
+      "subtitle" : "{{productName}} necesita aplicaciones de cadena de bloques para aprobar tus transacciones de cripto y NFTs.",
+      "installCTA" : "Instalar ahora",
+      "skipCTA" : "Lo haré más tarde"
+    },
+    "locked" : {
+      "title" : "Tu {{productName}} está bloqueado",
+      "subtitle" : "Desbloquea tu {{productName}} y reinicia la instalación.",
+      "installCTA" : "Reiniciar instalación"
+    }
   }
 }
